cambiato macrostruttura e bk-card

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -11,6 +11,6 @@
 
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: rgba(24, 24, 99, 0.884);
+    background-color: #d48f38;
 
 }
